# gh-action-baseproject

./: CHANGELOG.md  action.yml  renovate.json
.github/workflows/: gar-auth-testing.yaml  pr-checks.yaml  release.yml  self-surveillance-check.yaml
test/: pyproject.toml
