[project]
name = "zeit.gha-tests"
version = "0.0.1.dev0"
authors = [{ name = "Zeit Online", email = "zon-backend@zeit.de" }]
requires-python = ">=3.13"
dependencies = [
    "zeit.msal",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pypi-zon"
url = "https://europe-west3-python.pkg.dev/zeitonline-engineering/pypi-zon/simple/"
explicit = true
authenticate = "always"
